feat: implement paginated card view for users